Ep 4926 (#976)
* EP-5055-2 (#950)

* java 21 spring boot 4